[package]
name = "mt3339"
version = "0.1.0"
edition = "2024"
exclude = ["CHANGELOG.md", "examples/*"]

[dependencies]
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embedded-io = { version = "0.7.1", features = ["defmt"] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
heapless = "0.9.3"
nmea = { version = "0.7.0", default-features = false, features = ["defmt-03", "GLL", "RMC", "VTG", "GGA", "GSA", "GSV", "ZDA"] }