[package]
name = "mt3339-rp235x-async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.5"
defmt = "1.1.0"
defmt-rtt = "1.2.0"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embedded-io-async = "0.7.0"
embassy-rp = { version = "0.10.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
mt3339 = { path = "../../../" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
static_cell = "2.1.1"

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[[bin]]
name = "simple"
path = "src/bin/simple.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "uart"
path = "src/bin/uart.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "buf_uart"
path = "src/bin/buf_uart.rs"
test = false
doctest = false
bench = false